kustomize/overlays/dev/nginx-ingress-argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # setting basic authentication
    # https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: nginx-ingress-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # kubernetes.io/tls-acme: "true"
    # certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-server.local
    http:
      paths:
        - pathType: Prefix
          path: /argocd
          backend:
            service:
              name: argocd-server
              port:
                number: 80
